# lcd

./: .gitignore  CMakeLists.txt  README.md  build_flash.bat  flash.bat  partitions.csv  push_to_github.bat  sdkconfig  sdkconfig.defaults  serial_monitor.bat
main/: CMakeLists.txt  avatar_frames.c  avatar_frames.h  avatar_image.c  avatar_image.h  avatar_rgb666_frames.c  avatar_rgb666_frames.h  lcd_ili9488.c  lcd_ili9488.h  main.c  static_avatar.c  static_avatar.h
